--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ button {
 }
 
 .hero-title {
-  font-size: 56px;
+  font-size: 56px !important;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
