--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
-  /* test2 */
-  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: #434455;
   background-color: #fff;
@@ -9,18 +8,18 @@ body {
 
 /*#region Reset*/
 
-/* test2 */
 /* ul,
 ol {
   list-style-type: none;
 }
 
- /* test2 */
 a {
   text-decoration: none;
   color: currentColor;
 }
-*/ button {
+*/
+
+button {
   cursor: pointer;
 }
 
@@ -29,10 +28,6 @@ a {
 /*#region Common*/
 
 .logo {
-  /* test2 */
-  display: flex;
-  margin-right: 76px;
-
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -77,8 +72,6 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  /* test2 */
-  padding: 0 24px;
 }
 
 .contacts {
@@ -103,8 +96,6 @@ a {
 
 .section-hero {
   background-color: #2e2f42;
-  /* test2 */
-  height: 500px;
 }
 
 .hero-title {
@@ -139,8 +130,6 @@ a {
 }
 
 .team-item {
-  /* test2 */
-  width: 264px;
   background-color: #fff;
 }
 
@@ -155,8 +144,6 @@ a {
 
 .page-footer {
   background-color: #2e2f42;
-  /* test2 */
-  width: 1440px;
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
