--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 /*#region Reset*/
 
-/* ul,
+ul,
 ol {
   list-style-type: none;
 }
@@ -17,7 +17,6 @@ a {
   text-decoration: none;
   color: currentColor;
 }
-*/
 
 button {
   cursor: pointer;
