--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
+:root {
+  --main-color: #434455;
+  --accent: #4d5ae5;
+}
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  color: #434455;
+  color: var(--main-color);
   background-color: #fff;
   line-height: 1.5;
 }
@@ -33,7 +37,7 @@ button {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--accent);
 }
 
 .section-title {
@@ -42,7 +46,6 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  color: #2e2f42;
 }
 
 .card-subtitle {
