--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,7 @@
-:root {
-  --main-color: #434455;
-  --accent: #4d5ae5;
-}
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  color: var(--main-color);
+  color: #434455;
   background-color: #fff;
   line-height: 1.5;
 }
@@ -31,13 +27,12 @@ button {
 /*#region Common*/
 
 .logo {
-  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--accent);
+  color: #4d5ae5;
 }
 
 .section-title {
@@ -46,6 +41,7 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
+  color: #2e2f42;
 }
 
 .card-subtitle {
@@ -64,32 +60,19 @@ button {
 /*#endregion Common*/
 
 /*#region Header*/
-
-.header-logo .logo-part {
-  color: #2e2f42;
+.page-header {
+  font-family: 'Raleway', sans-serif;
 }
 
 .nav-link {
-  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-
-.contacts {
-  font-style: normal;
 }
 
 .contacts-link {
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus {
-  color: #404bbf;
 }
 
 /*#endregion Header*/
