--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ button {
 /*#region Common*/
 
 .logo {
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -60,19 +61,29 @@ button {
 /*#endregion Common*/
 
 /*#region Header*/
-.page-header {
-  font-family: 'Raleway', sans-serif;
+
+.header-logo .logo-part {
+  color: #2e2f42;
 }
 
 .nav-link {
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .contacts-link {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.nav-link:hover,
+.nav-link:focus,
+.contacts-link:hover,
+.contacts-link:focus {
+  color: #404bbf;
 }
 
 /*#endregion Header*/
