--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,10 @@ button {
   color: #2e2f42;
 }
 
+.contacts {
+  font-style: normal;
+}
+
 .contacts-link {
   line-height: 1.5;
   letter-spacing: 0.02em;
