--- a/css/styles.css
+++ b/css/styles.css
@@ -93,31 +93,24 @@ button {
 
 /*#region Hero*/
 
-.section-hero {
-  background-color: #2e2f42;
-}
-
 .hero-title {
-  font-size: 56px;
+  font-size: 32px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
+
   color: #fff;
 }
 
 .hero-btn {
-  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #fff;
-  background-color: #4d5ae5;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
-  background-color: #404bbf;
+  background-color: #2e3799;
 }
 
 /*#endregion Hero*/
