--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ button {
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 
 .card-subtitle {
@@ -121,11 +124,7 @@ button {
 
 /*#region Team*/
 
-.section-team {
-  background-color: #f4f4fd;
-}
-
-.team-item {
+.team-list {
   background-color: #fff;
 }
 
@@ -141,7 +140,7 @@ button {
 .page-footer {
   background-color: #2e2f42;
 }
-.footer-logo .logo-part {
+.logo-part {
   color: #f4f4fd;
 }
 .footer-text {
