--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,11 @@ button {
   background-color: #f4f4fd;
 }
 
+.team-subtitle,
+.team-text {
+  text-align: center;
+}
+
 /*#endregion Team*/
 
 /*#region Footer*/
