--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ button {
 .page-footer {
   background-color: #2e2f42;
 }
-.logo-part {
+.footer-logo .logo-part {
   color: #f4f4fd;
 }
 .footer-text {
