--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,21 @@ button {
 
 /*#region Team*/
 
+.card-subtitle {
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
 .section-team {
   background-color: #f4f4fd;
+}
+
+.team-item {
+  background-color: #fff;
 }
 
 .team-subtitle,
