--- a/css/styles.css
+++ b/css/styles.css
@@ -142,10 +142,15 @@ button {
 /*#region Footer*/
 
 .page-footer {
-  font-family: 'Raleway', sans-serif;
+  background-color: #2e2f42;
 }
-
+.footer-logo .logo-part {
+  color: #f4f4fd;
+}
 .footer-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
 
 /*#endregion Footer*/
